tasks/serde-rs__serde-2405/tests/test_suite/tests/ui/unexpected-literal/field.stderr
error: expected identifier
 --> tests/ui/unexpected-literal/field.rs:5:13
  |
5 |     #[serde("literal")]
  |             ^^^^^^^^^
